Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductRevision__c/SMAX_PS_ProductRevision__c.object-meta.xml
<CustomObject>
    <label>Product Revision</label>
    <nameField>
        <displayFormat>PREV-{00000000}</displayFormat>
        <label>Product Revision Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Revisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>