Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductRevision__c/fields/SMAX_PS_RevisionDate__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_RevisionDate__c</fullName>
    <label>Revision Date</label>
    <type>Date</type>
</CustomField>