Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductRevision__c/fields/SMAX_PS_RevisionLevel__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_RevisionLevel__c</fullName>
    <label>Revision Level</label>
    <length>2</length>
    <type>Text</type>
</CustomField>